--- a/public/css/myprofile.css
+++ b/public/css/myprofile.css
@@ -8,7 +8,7 @@
 .card {
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width:45%;
+  width:55%;
   min-width: 200px;
   margin: auto;
   text-align: center;
@@ -16,8 +16,8 @@
   border: 3px solid black;
 }
 .name{
-  color: grey;
-  font-size: 2.75vw;
+  color: black;
+  font-size: 3vw;
 }
 .hero1 {
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
@@ -37,7 +37,7 @@
 .insidebutton1{
   color: white;
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-  font-size: 0.88vw;
+  font-size: 1.2vw;
   font-weight: 520; 
 }
 .topbtn{
@@ -48,6 +48,7 @@
   color: #fff;
   cursor: pointer;
   width:33%;
+  height:26px;
   /*min-width: 100px;
   height: 40%;
   min-height: 70px;*/
@@ -72,8 +73,8 @@
 }
  .lul {
   position:fixed;
-  top:5px;
-  right: 5px;
+  top:13px;
+  right: 13px;
   color: black;
  /*background-color: white;*/
  float: right;
@@ -86,7 +87,7 @@ text-align:right;
 }
 
 .title {
-  color: grey;
+  color: black;
   font-size: 2vw;
 }
 .aaa{
