--- a/views/splashscreen.html
+++ b/views/splashscreen.html
@@ -4,12 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Scriptomania|Home </title>
-
-
-  
-       <link rel="stylesheet" href="./css/home.css">
-
-  
+  <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body>
@@ -19,7 +14,7 @@
 </div>
 <div>
 <h2 class="welcome">Dedicated to Develop Media Industry</h2>
-<p class = "hero">In <b>Pakistan</b>, the film industry is in its development stage and lacks a platform to link script writers to the film industry. Our web app plays essential role in the development of our film industry by letting people who are passionate about writing, showcase their talent to famous producers of Pakistan’s film industry. It will increase the employment opportunities in digital sector of our country. Moreover, the producers can find some quality work without the headache of meeting script writers personally which will save their valuable time.
+<p class = "hero">In <b>Pakistan</b>, the film industry is in its development stage and lacks a platform to link script writers to the film industry. Scriptomania let people who are passionate about writing, showcase their talent to famous producers.
 </p>
 </div>
 
