--- a/views/users/editprof.handlebars
+++ b/views/users/editprof.handlebars
@@ -2,18 +2,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Scriptomania|Edit Profile</title>
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  
-      <link rel="stylesheet" href="/css/edit_prof.css">
-
-  
+     <link rel="stylesheet" href="/css/edit_prof.css">  
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
 <body>
               <div class = "lul">
-            <table>
+            <table  >
               <tr >
              {{#if conditionwp}}
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/writer">Home</a></div></td>
@@ -32,17 +26,24 @@
   <h1 >Edit profile </h1>
   </div>
 <div class="signup_form">
-  <form method ="POST" action="/users/edit_form/{{conditionwp}}">
+  <form method ="POST" action="/users/edit_form?_method=PUT">
+
+
     <label>Username</label>
-    <input type="text" name="username"  <br><br>
+    <input type="text" name="username"  required placeholder="Username" maxlength="10" required pattern="[A-Za-z0-9._-]+"><br><br>
+
     <label>Contact Number</label>
-    <input type="integer" name="Contact" required placeholder="+92xxx-xxxxxxx"><br><br>
+    <input type="integer" name="Contact" required placeholder="+92xxx-xxxxxxx" maxlength="14" required pattern="[0-9-]+.{13,}"><br><br>
+
     <label>Enter Old Password</label>
-    <input type="Password" name="oldPassword" required placeholder="Old Password"><br><br>
+    <input type="Password" name="oldPassword" required placeholder="Old Password" maxlength="15" pattern=".{6,}"><br><br>
+
     <label>Enter New Password</label>
-    <input type="Password" name="Password" required placeholder="New Password"><br><br>
-    <label>Confirm New Password</label>
-    <input type="Password" name="ConfirmPassword" required placeholder="Rewrite New Password"><br><br>
+    <input type="Password" name="Password" required placeholder="Password (min-length=6)" maxlength="15" pattern=".{6,}"><br><br>
+
+    <label>Confirm New password</label>
+    <input type="Password" name="ConfirmPassword" required placeholder="Rewrite Password" maxlength="15" pattern=".{6,}"><br>
+
     <input type="Submit" value="Update">
   </form>
   </div>
