--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -30,14 +30,12 @@
 </script>
 <body>
 
-  <section class="login-form-wrap">
-  <div>
+  <div class="login-form-wrap">
+  
   <img src="/img/scripto.png" alt="Logo of Scriptomania" height="80" width="80">
   
-    
-  <h1>Log in to Scriptomania
-  </h1>
-  </div>
+  <h2>Log in to Scriptomania</h2>
+
   <form class="login-form" action="/users/submit_login_form" method="POST">
     <label>
       <input type="text" name="username" required placeholder="Username">
@@ -49,16 +47,13 @@
     <input type="checkbox" name="show_pass" onclick="showpass();">
     <label class="shower">Show Password</label>
     </div>
-    <br>
+   
     <input type="submit" value="Login">
+    
+ <h4><a class="A" href = "signup">Don't have an account? Click here to register</a></h4>
   </form>
-  <h5><a href="#">Forgot password</a></h5>
- <h4 style ="color: black"><a href = "signup">Don't have an account? Click here to register</a></h4>
-
-</section>
-
+</div>
   
-
 </body>
 <footer class="footer">©2019 Scriptomania, Inc.</footer>
 </html>
