--- a/views/users/producer.handlebars
+++ b/views/users/producer.handlebars
@@ -1,12 +1,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Scriptomania|Home </title>
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
+  <title>Scriptomania|Producer </title>
   
-       <link rel="stylesheet" href="/css/writer.css">
+       <link rel="stylesheet" href="/css/producer.css">
 
   
 </head>
@@ -17,7 +14,7 @@
               <tr >
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My profile</a></div></td>
 
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Log out</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
               </tr>
             </table>
             </div>
@@ -35,13 +32,11 @@
 
       <a class="insidebutton", href="/users/editprofp"><button class="btn">Edit Profile</button></a></div>
       <div>
-      <a class="insidebutton", href="/users/read"><button class="btn">Read Scripts</button></a>
+      <a class="insidebutton", href="/users/read"><button class="btn">Buy Scripts</button></a>
 </div>
 <div>
-      <a class="insidebutton", href="/users/signup"><button class="btn1">View Transaction History</button></a></div>
-<div>
-      <a class="insidebutton", href="/users/signup"><button class="btn1">View Current Subscription</button></a></div>
-</div>
+      <a class="insidebutton", href="/users/th_producer"><button class="btn1">Transaction History</button></a></div>
+
   
 </div>
 
