--- a/views/users/viewprof.handlebars
+++ b/views/users/viewprof.handlebars
@@ -31,19 +31,19 @@
 
 <div class="card">
   <h1 class="name">{{name}}</h1>
-  <p class="title">{{user}}</p>
-  <p>Contact: {{contact}}</p>
-  <p>CNIC: {{CNIC}}</p>
-  <p>e-mail: {{email}}</p>
-  <p>Date of Birth {{date}}</p>
+  <h2 class="title">({{user}})</h2>
+  <h3 style="color:black">Contact: {{contact}}</h3>
+  <h3 style="color:black">CNIC: {{CNIC}}</h3>
+  <h3 style="color:black">e-mail: {{email}}</h3>
+  <h3 style="color:black">Date of Birth {{date}}</h3>
 
-  
+  <p><button>Contact</button></p>
   <div style="margin: 24px 0;">
     <a href="twitter.com"><i class="fa fa-twitter"></i></a>  
     <a href="linkedin.com"><i class="fa fa-linkedin"></i></a>  
     <a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a> 
   </div>
-  <p><button>Contact</button></p>
+  
 </div>
 
 
