--- a/views/users/writer.handlebars
+++ b/views/users/writer.handlebars
@@ -29,13 +29,14 @@
         <a class="insidebutton", href="/users/editprofw">  <button class="btn">Edit Profile</button></a>
       </div>
       <div>
-        <a class="insidebutton", href="/users/up"> <button class="btn">Manage Scripts</button></a>
+        <a class="insidebutton", href="/users/up"> <button class="btn">Upload Scripts</button></a>
       </div>
       <div>
-        <a class="insidebutton", href="/users/signup"><button class="btn1">View Transaction History</button></a>
+        <a class="insidebutton", href="/users/s_writer"><button class="btn1">Manage Scripts</button></a>
+        
       </div>
       <div>
-        <a class="insidebutton", href="/users/signup"><button class="btn1">View Submitted Scripts</button></a>
+        <a class="insidebutton", href="/users/th_writer"><button class="btn1">Transaction History</button></a>
       </div>
     </div>
   </div>
