--- a/public/css/producer.css
+++ b/public/css/producer.css
@@ -149,7 +149,7 @@ body {
   min-width: 100px;
   padding: 10px 0 44px 0;
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: 33.3% 33.3% 33.3%;
 }
 
 .footer{
