--- a/public/css/register.css
+++ b/public/css/register.css
@@ -17,7 +17,7 @@ body {
 .showpass{
   float: left;
   /*font-style: italic;*/
-  padding-bottom: 20px
+  padding-bottom: 10px
   /*padding-top:10px*/
 }
 .login-form-wrap {
@@ -63,7 +63,7 @@ body {
   border-radius: 0 0 4px 4px;
   box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.23) inset, 0 1px 2px rgba(255, 255, 255, 0.1);
 }
-.login-form input[type="submit"] {
+.signup_form input[type="submit"] {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   background: linear-gradient(to bottom, #e0e0e0 0%, #cecece 100%);
@@ -79,10 +79,10 @@ body {
   font-weight: 700;
   box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.17), 0 1px 0 rgba(255, 255, 255, 0.36) inset;
 }
-.login-form input[type="submit"]:hover {
+.signup_form input[type="submit"]:hover {
   background: #DDD;
 }
-.login-form input[type="submit"]:active {
+.signup_form input[type="submit"]:active {
   padding-top: 9px;
   padding-bottom: 7px;
   background: #C9C9C9;
@@ -97,7 +97,7 @@ body {
   clear: both;
 
 }
-.signup_form input{
+.signup_form_input{
 width: 100%;
 vertical-align:right;
 clear: both;
@@ -167,4 +167,19 @@ color: black;
   position:relative;
   bottom: 0;
   width: 100%;
-  
+}
+.label {
+  display: block;
+  padding-left: 15px;
+  text-indent: -15px;
+}
+.input {
+  width: 13px;
+  height: 13px;
+  padding: 0;
+  margin:0;
+  vertical-align: bottom;
+  position: relative;
+  top: -5px;
+  *overflow: hidden;
+}
