--- a/views/users/submitted_writer.handlebars
+++ b/views/users/submitted_writer.handlebars
@@ -1,30 +1,37 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Buy Scripts</title>
+    <title>File Uploads</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/upload.css">
   </head>
   <STYLE>A {text-decoration: none;} </STYLE>
-  <body>
+<body>
     <div class = "lul">
       <table  >
         <tr >
-          <td class="topbtn"><a  class ="insidebutton1 " href="/users/producer">Home</a></div></td>
-          <td class="topbtn"><a  class ="insidebutton1 " href="/users/viewprof">My Profile</a></div></td>
+          <td class="topbtn"><a  class ="insidebutton1 " href="/users/writer">Home</a></div></td>
+          <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My Profile</a></div></td>
           <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
         </tr>
       </table>
       </div>
     <br>
-    <div class="container">
-      <div class="aaa">
+  <div class="container">
+
+ <div class="aaa">
         <h2 class = "hero1"><img class="sss" src="/img/scripto.png" alt="Logo" width="80" height="100"></img><br><br>Scriptomania </h2><br>
       </div>
-     
-        <h1 class="text-center display-4 my-4">Scripts</h1>
 
-        <form  class="width" action="/users/filter_producer" method="POST" >
+      
+       
+
+    
+      
+       <!--  <h2 class="welcome">Manage Scripts</h2> -->
+   
+          <!-- <div class="col-md-5 m-auto"> -->
+        <form  class="width" action="/users/filter" method="POST" >
         <div class="card card-body mb-4">
 
     <select name="genref" id="genref" onchange="this.form.submit()">
@@ -74,8 +81,8 @@
           </p>
         </div>
           
-          <form method="GET" action="/users/producers/files/{{this._id}}?_">
-            <a href = "/users/buy" ><button class="btn btn-danger btn-block mt-4">BUY</button></a>
+          <form method="POST" action="/users/files/{{this._id}}?_method=DELETE">
+            <button class="btn btn-danger btn-block mt-4">Delete</button>
           </form>
          </div> 
        </div>
@@ -83,8 +90,9 @@
 
 
 
-      </div>
- 
+    
+    </div>
+  </div>
   
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
