--- a/views/users/script_producers.handlebars
+++ b/views/users/script_producers.handlebars
@@ -11,7 +11,7 @@
       <table  >
         <tr >
           <td class="topbtn"><a  class ="insidebutton1 " href="/users/producer">Home</a></div></td>
-          <td class="topbtn"><a  class ="insidebutton1 " href="/users/viewprof">My Profile</a></div></td>
+          <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My Profile</a></div></td>
           <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
         </tr>
       </table>
