--- a/views/users/editprof.handlebars
+++ b/views/users/editprof.handlebars
@@ -2,19 +2,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Scriptomania|Edit Profile</title>
-     <link rel="stylesheet" href="/css/edit_prof.css">  
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+      <link rel="stylesheet" href="/css/edit_prof.css">
+
+  
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
 <body>
               <div class = "lul">
-            <table  >
+            <table>
               <tr >
              {{#if conditionwp}}
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/writer">Home</a></div></td>
              {{else}}
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/producer">Home</a></div></td>
               {{/if}}
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/viewprof">My Profile</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My Profile</a></div></td>
 
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
               </tr>
@@ -26,24 +32,17 @@
   <h1 >Edit profile </h1>
   </div>
 <div class="signup_form">
-  <form method ="POST" action="/users/edit_form?_method=PUT">
-
-
+  <form method ="POST" action="/users/edit_form/{{conditionwp}}">
     <label>Username</label>
-    <input type="text" name="username"  required placeholder="Username" maxlength="10" required pattern="[A-Za-z0-9._-]+"><br><br>
-
+    <input type="text" name="username"  <br><br>
     <label>Contact Number</label>
-    <input type="integer" name="Contact" required placeholder="+92xxx-xxxxxxx" maxlength="14" required pattern="[0-9-]+.{13,}"><br><br>
-
+    <input type="integer" name="Contact" required placeholder="+92xxx-xxxxxxx"><br><br>
     <label>Enter Old Password</label>
-    <input type="Password" name="oldPassword" required placeholder="Old Password" maxlength="15" pattern=".{6,}"><br><br>
-
+    <input type="Password" name="oldPassword" required placeholder="Old Password"><br><br>
     <label>Enter New Password</label>
-    <input type="Password" name="Password" required placeholder="Password (min-length=6)" maxlength="15" pattern=".{6,}"><br><br>
-
-    <label>Confirm New password</label>
-    <input type="Password" name="ConfirmPassword" required placeholder="Rewrite Password" maxlength="15" pattern=".{6,}"><br>
-
+    <input type="Password" name="Password" required placeholder="New Password"><br><br>
+    <label>Confirm New Password</label>
+    <input type="Password" name="ConfirmPassword" required placeholder="Rewrite New Password"><br><br>
     <input type="Submit" value="Update">
   </form>
   </div>
