--- a/views/users/viewprof.handlebars
+++ b/views/users/viewprof.handlebars
@@ -17,7 +17,7 @@
              {{else}}
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/producer">Home</a></div></td>
               {{/if}}
-                <td class="topbtn"><a  class ="insidebutton1 " href="/users/signup">My Profile</a></div></td>
+                <td class="topbtn"><a  class ="insidebutton1 " href="/users/view">My Profile</a></div></td>
 
                 <td class="topbtn"><a  class ="insidebutton1 " href="/users/loggedout">Logout</a></div></td>
               </tr>
